--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "TremiDkhar/tsd-get-svg",
+	"name": "tremidkhar/tsd-get-svg",
 	"description": "A PHP library that allows to easily retrieve svg icon from the stored directory and output or stored the markup as variable",
 	"homepage": "https://github.com/TremiDkhar/tsd-get-svg",
 	"keywords": ["wordpress", "plugins", "themes", "php", "svg", "library" ],
