Rename the files to match the class name

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,6 @@
 	    "wp-coding-standards/wpcs": "^2.0"
 	},
 	"autoload": {
-		"files": ["class-tsd-get-svg-icon.php"]
+		"files": ["class-tsd-get-svg.php"]
 	}
 }
